# matter_rvc

./: .gitmodules  BUILD.gn  chip_rvc_app_build_log.txt
.claude/: settings.local.json
examples/rvc-app/flower-client-cmake/: CMakeLists.txt  simple_test.cpp
examples/rvc-app/linux/: BUILD.gn  debug_weights.cpp  flower_client_main.cpp  inspect_tensors.cpp  main.cpp  test_int8_training.cpp  test_training.cpp
examples/rvc-app/rvc-common/include/: RvcAIInterface.h  RvcAITrainer.h  RvcFlowerClient.h
examples/rvc-app/rvc-common/src/: RvcAIInterface.cpp  RvcAITrainer.cpp  RvcFlowerClient.cpp
scripts/examples/: gn_build_example.sh
